--- a/SmartLearnChat/frontend/src/index.css
+++ b/SmartLearnChat/frontend/src/index.css
@@ -4,8 +4,8 @@ html,
 body {
   margin: 0;
   padding: 0;
-  background: #05101c;
-  color: white;
+  background: rgba(229, 215, 194, 0.973);
+  color: #58595B;
   font-family: "Noto Sans", serif;
 }
 
@@ -27,4 +27,17 @@ body {
 .MuiOutlinedInput-input-root.Mui-focused,
 .MuiOutlinedInput-notchedOutline {
   border-color: white !important;
+}
+
+.rotate {
+  animation: rotation 8s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
